--- a/templates/flight/ticket.html
+++ b/templates/flight/ticket.html
@@ -230,19 +230,19 @@
             <table cellspacing='0' style="width: 100vw;">
                 <tr class="tr-odd">
                     <th style="width: 35%;">FARE</th>
-                    <td style="width: 65%;">INR {{ticket1.flight_fare}}</td>
+                    <td style="width: 65%;">BDT {{ticket1.flight_fare}}</td>
                 </tr>
                 <tr class="tr-even">
                     <th style="width: 35%;">CHARGES</th>
-                    <td style="width: 65%;">INR {{ticket1.other_charges}}</td>
+                    <td style="width: 65%;">BDT {{ticket1.other_charges}}</td>
                 </tr>
                 <tr class="tr-odd">
                     <th style="width: 35%;">DISCOUNT</th>
-                    <td style="width: 65%;">INR (-) {{ticket1.coupon_discount}}</td>
+                    <td style="width: 65%;">BDT (-) {{ticket1.coupon_discount}}</td>
                 </tr>
                 <tr class="tr-even">
                     <th style="width: 35%;">TOTAL</th>
-                    <td style="width: 65%;">INR {{ticket1.total_fare}}</td>
+                    <td style="width: 65%;">BDT {{ticket1.total_fare}}</td>
                 </tr>
             </table>
         </div>
