--- a/templates/flight/search.html
+++ b/templates/flight/search.html
@@ -181,11 +181,11 @@
                                             <input type="range" class="form-control-range" min="{{min_price}}" max="{{max_price}}" value="{{max_price}}" oninput="filter()">
                                             <div class="price-range-output">
                                                 <div class="initial-price-range">
-                                                    <span class="currency-symbol">₹</span>
+                                                    <span class="currency-symbol">৳</span>
                                                     <span class="initial-price-value">{{min_price}}</span>
                                                 </div>
                                                 <div class="final-price-range">
-                                                    <span class="currency-symbol">₹</span>
+                                                    <span class="currency-symbol">৳</span>
                                                     <span class="final-price-value"></span>
                                                 </div>
                                             </div>
@@ -389,7 +389,7 @@
                                             <div class="flight-details">
                                                 <div class="flight-price">
                                                     <h5>
-                                                        ₹ 
+                                                        ৳ 
                                                         <span>
                                                             {% if seat == 'Economy' %}{{flight.economy_fare}}{% endif %}
                                                             {% if seat == 'Business' %}{{flight.business_fare}}{% endif %}
@@ -467,11 +467,11 @@
                                                 <input type="range" class="form-control-range" min="{{min_price2}}" max="{{max_price2}}" value="{{max_price2}}" oninput="filter2()">
                                                 <div class="price-range-output">
                                                     <div class="initial-price-range">
-                                                        <span class="currency-symbol">₹</span>
+                                                        <span class="currency-symbol">৳</span>
                                                         <span class="initial-price-value">{{min_price2}}</span>
                                                     </div>
                                                     <div class="final-price-range">
-                                                        <span class="currency-symbol">₹</span>
+                                                        <span class="currency-symbol">৳</span>
                                                         <span class="final-price-value"></span>
                                                     </div>
                                                 </div>
@@ -675,7 +675,7 @@
                                                 <div class="flight-details">
                                                     <div class="flight-price">
                                                         <h5>
-                                                            ₹ 
+                                                            ৳ 
                                                             <span>
                                                                 {% if seat == 'Economy' %}{{flight2.economy_fare}}{% endif %}
                                                                 {% if seat == 'Business' %}{{flight2.business_fare}}{% endif %}
@@ -737,7 +737,7 @@
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
                             </svg>
-                            <span>{{destination.code|upper}}</span>&nbsp;&nbsp;@&nbsp;&nbsp;₹
+                            <span>{{destination.code|upper}}</span>&nbsp;&nbsp;@&nbsp;&nbsp;৳
                             <span id="select-f1-fare">
                                 {% if seat == "Economy" %}
                                     {{flights.all.0.economy_fare}}
@@ -764,7 +764,7 @@
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
                             </svg>
-                            <span>{{origin.code|upper}}</span>&nbsp;&nbsp;@&nbsp;&nbsp;₹
+                            <span>{{origin.code|upper}}</span>&nbsp;&nbsp;@&nbsp;&nbsp;৳
                             <span id="select-f2-fare">
                                 {% if seat == "Economy" %}
                                     {{flights2.all.0.economy_fare}}
@@ -790,7 +790,7 @@
                             <span>TOTAL FARE</span>
                         </div>
                         <div>
-                            <span>₹
+                            <span>৳
                                 <span id="select-total-fare">
                                     {% if seat == "Economy" %}
                                         {{flights.all.0.economy_fare | add:flights2.all.0.economy_fare}}
@@ -825,7 +825,7 @@
                                 <div>AMOUNT</div>
                             </div>
                             <div class="col-7" style="font-size: 1.2em; font-weight: bold; display: flex; padding: 0;">
-                                <span style="margin: auto;">₹
+                                <span style="margin: auto;">৳
                                     <span id="select-total-fare-media">
                                         {% if seat == "Economy" %}
                                             {{flights.all.0.economy_fare | add:flights2.all.0.economy_fare}}
