--- a/flight/static/css/bookings_style.css
+++ b/flight/static/css/bookings_style.css
@@ -49,7 +49,7 @@ body{
     background-color: green;
 }
 .red{
-    background-color: red;
+    background-color: #4c645b;
 }
 .orange{
     background-color: orange;
