--- a/templates/flight/ticket.html
+++ b/templates/flight/ticket.html
@@ -91,7 +91,7 @@
     <nav>
         <div class="col logo" style="width: 50%;">
             <!--<img src="{% static 'img/icon_logo.png' %}" width="45%">-->
-            <span style="color: rgb(225, 35, 35); font-weight: bold; font-size: 2.5em;">FLIGHT</span>
+            <span style="color: #4c645b; font-weight: bold; font-size: 2.5em;">TourGuide</span>
         </div>
         <div class="col header" style="width: 50%;">
             <span style="margin: auto 0 auto auto;">E-Ticket</span>
