--- a/templates/flight/index.html
+++ b/templates/flight/index.html
@@ -7,21 +7,22 @@
 {% endblock head %}
 
 {% block body %}
-    <section class="section first-section" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url('{% static 'img/plane3.12.jpg'%}');">
+    
+    <section class="section first-section" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url('{% static 'img/air1.jpg'%}')">
         <div class="banner-div">
             <div class="banner">
             <h1 class="banner-text">Book Domestic and International Flight Tickets</h1>
             </div>
         </div>
-        <div class="search-flight">
-            <div class="container">
+        <div class="search-flight" style="height: 550px; width: 500px;" >
+            <div class="container" style="padding-top: 2rem;">
             <form class="search-flight-form" action="{% url 'flight:flight' %}" onsubmit="return flight_search()">
                 <div class="align-items-center">
                     <div class="search-flight-form-data">
                         <div class="input-row" style="display: flex;">
                         <div class="form-check-inline">
                             <label class="form-check-label">
-                            <input type="radio" class="form-check-input trip-type" id="one-way" name="TripType" value="1" checked>One-way
+                            <input type="radio" class="form-check-input trip-type" style="font-size: large;" id="one-way" name="TripType" value="1" checked>One-way
                             </label>
                         </div>
                         <!-- <div class="form-check-inline">
@@ -31,49 +32,49 @@
                         </div> -->
                         </div>
                         <div class="input-row">
-                            <label for="flight-from">From: </label>
-                            <input type="text" name="Origin" placeholder="From" id="flight-from" class="form-control mr-sm-3" onblur="hideplaces(this)" data-value="{{origin | lower}}" data-list="places_from" autocomplete="off" value="{{origin | upper}}">  <!--list="places_from"-->
+                            <label for="flight-from" style="font-size: small;">From: </label>
+                            <input type="text" name="Origin" placeholder="From" id="flight-from" class="form-control mr-sm-3" style="font-size: small;" onblur="hideplaces(this)" data-value="{{origin | lower}}" data-list="places_from" autocomplete="off" value="{{origin | upper}}">  <!--list="places_from"-->
                             <div id="places_from" class="places_box">
-                                <div class="each_places_from_list places__list" data-value="del" onclick="selectplace(this)">Delhi (India)</div>
-                                <div class="each_places_from_list places__list" data-value="bom" onclick="selectplace(this)">Mumbai (India)</div>
-                                <div class="each_places_from_list places__list" data-value="bkk" onclick="selectplace(this)">Bangkok (Thailand)</div>
-                                 <div class="each_places_from_list places__list" data-value="nrt" onclick="selectplace(this)">Tokyo (Japan)</div> 
-                                <div class="each_places_from_list places__list" data-value="sin" onclick="selectplace(this)">Singapore (Singapore)</div>
-                                <div class="each_places_from_list places__list" data-value="tpe" onclick="selectplace(this)">Taipei (Taiwan)</div>
-                                <div class="each_places_from_list places__list" data-value="nyc" onclick="selectplace(this)">New York (USA)</div> 
+                                <div class="each_places_from_list places__list" style="font-size: small;" data-value="del" onclick="selectplace(this)">Delhi (India)</div>
+                                <div class="each_places_from_list places__list" style="font-size: small;" data-value="bom" onclick="selectplace(this)">Mumbai (India)</div>
+                                <div class="each_places_from_list places__list" style="font-size: small;" data-value="bkk" onclick="selectplace(this)">Bangkok (Thailand)</div>
+                                 <div class="each_places_from_list places__list" style="font-size: small;" data-value="nrt" onclick="selectplace(this)">Tokyo (Japan)</div> 
+                                <div class="each_places_from_list places__list" style="font-size: small;" data-value="sin" onclick="selectplace(this)">Singapore (Singapore)</div>
+                                <div class="each_places_from_list places__list" style="font-size: small;" data-value="tpe" onclick="selectplace(this)">Taipei (Taiwan)</div>
+                                <div class="each_places_from_list places__list" style="font-size: small;" data-value="nyc" onclick="selectplace(this)">New York (USA)</div> 
                             </div>
                         </div>
                         <div class="input-row">
-                            <label for="flight_to">To: </label>
-                            <input type="text" name="Destination" placeholder="To" id="flight-to" class="form-control mr-sm-3" onblur="hideplaces(this)" data-value="{{destination | lower}}" data-list="places_to" autocomplete="off" value="{{destination | upper}}">
+                            <label for="flight_to" style="font-size: small;">To: </label>
+                            <input type="text" name="Destination" placeholder="To" id="flight-to" class="form-control mr-sm-3" style="font-size: small;" onblur="hideplaces(this)" data-value="{{destination | lower}}" data-list="places_to" autocomplete="off" value="{{destination | upper}}">
                             <div id="places_to" class="places_box">
-                                <div class="each_places_to_list places__list" data-value="del" onclick="selectplace(this)">Delhi (India)</div>
-                                <div class="each_places_to_list places__list" data-value="bom" onclick="selectplace(this)">Mumbai (India)</div>
-                                <div class="each_places_to_list places__list" data-value="bkk" onclick="selectplace(this)">Bangkok (Thailand)</div>
-                                <div class="each_places_to_list places__list" data-value="nrt" onclick="selectplace(this)">Tokyo (Japan)</div>
-                                <div class="each_places_to_list places__list" data-value="sin" onclick="selectplace(this)">Singapore (Singapore)</div>
-                                <div class="each_places_to_list places__list" data-value="tpe" onclick="selectplace(this)">Taipei (Taiwan)</div>
-                                <div class="each_places_to_list places__list" data-value="nyc" onclick="selectplace(this)">New York (USA)</div>
+                                <div class="each_places_to_list places__list" style="font-size: small;" data-value="del" onclick="selectplace(this)">Delhi (India)</div>
+                                <div class="each_places_to_list places__list" style="font-size: small;" data-value="bom" onclick="selectplace(this)">Mumbai (India)</div>
+                                <div class="each_places_to_list places__list" style="font-size: small;" data-value="bkk" onclick="selectplace(this)">Bangkok (Thailand)</div>
+                                <div class="each_places_to_list places__list" style="font-size: small;" data-value="nrt" onclick="selectplace(this)">Tokyo (Japan)</div>
+                                <div class="each_places_to_list places__list" style="font-size: small;" data-value="sin" onclick="selectplace(this)">Singapore (Singapore)</div>
+                                <div class="each_places_to_list places__list" style="font-size: small;" data-value="tpe" onclick="selectplace(this)">Taipei (Taiwan)</div>
+                                <div class="each_places_to_list places__list" style="font-size: small;" data-value="nyc" onclick="selectplace(this)">New York (USA)</div>
                             </div>
                         </div>
                         <div class="input-row">
-                            <label for="depart_date">Departure Date: </label>
-                            <input type="date" name="DepartDate" min="{{min_date}}" max="{{max_date}}" id="depart_date" placeholder="Date" class="form-control mr-sm-2" value="{{depart_date}}">
+                            <label for="depart_date" style="font-size: small;">Departure Date: </label>
+                            <input type="date" name="DepartDate" min="{{min_date}}" max="{{max_date}}" id="depart_date" placeholder="Date" class="form-control mr-sm-2" style="font-size: small;" value="{{depart_date}}">
                         </div>
                         <!-- <div class="input-row">
                             <label for="return_date">Return Date: </label>
                             <input type="date" name="ReturnDate" min="{{min_date}}" max="{{max_date}}" id="return_date" placeholder="Date" class="form-control mr-sm-2" value="{{return_date}}" disabled>
                         </div> -->
                         <div class="input-row">
-                            <label for="seat_class">Class: </label>
-                            <select name="SeatClass" id="SeatType" class="form-control mr-sm-2">
+                            <label for="seat_class" style="font-size: small;">Class: </label>
+                            <select name="SeatClass" id="SeatType" class="form-control mr-sm-2" style="font-size: small;">
                                 <option value="economy" {% if seat == 'economy' %}selected{% endif %}>Economy</option>
                                 <option value="business" {% if seat == 'business' %}selected{% endif %}>Business</option>
                                 <option value="first" {% if seat == 'first' %}selected{% endif %}>First</option>
                             </select>
                         </div>
-                        <div class="input-row">
-                            <button type="submit" class="btn btn-danger">Search Flight</button>
+                        <div class="input-row" style="padding-left: 3cm;">
+                            <button type="submit" class="btn" style="background-color: #4c645b;  color:#fff;;">Search Flight</button>
                         </div>
                     </div>
                 </div>
@@ -81,7 +82,7 @@
             </div>
         </div>
     </section>
-    <section class="section second-section">
+    <!-- <section class="section second-section">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
@@ -153,5 +154,224 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
+
+<style>
+     
+:root{
+  --orange:#4c645b;
+  --Dorange:rgb(190, 138, 42);
+}
+
+*{
+  font-family: 'Nunito', sans-serif;
+  margin:0; padding:0;
+  box-sizing: border-box;
+  text-transform: capitalize;
+  outline: none; border:none;
+  text-decoration: none;
+  transition: all .2s linear;
+}
+
+*::selection{
+  background:var(--orange);
+  color:#fff;
+}
+
+html{
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-padding-top: 6rem;
+  scroll-behavior: smooth;
+}
+
+section{
+  padding:2rem 9%;
+}
+
+.heading{
+  text-align: center;
+  padding:2.5rem 0
+}
+
+.heading span{
+  font-size: 3.5rem;
+  background:rgba(255, 165, 0,.2);
+  color:var(--orange);
+  border-radius: .5rem;
+  padding:.2rem 1rem;
+}
+
+.heading span.space{
+  background:none;
+}
+
+.btn{
+  display: inline-block;
+  margin-top: 1rem;
+  background:var(--orange);
+  color:#fff;
+  padding:.8rem 3rem;
+  border:.2rem solid var(--orange);
+  cursor: pointer;
+  font-size: 1.7rem;
+}
+
+.btn:hover{
+  background:rgba(255, 165, 0,.2);
+  color:var(--orange);
+}
+
+header{
+  position: fixed;
+  top:0; left: 0; right:0;
+  background:#333;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding:1rem 9%;
+}
+   
+.packages .box-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap:2rem;
+}
+
+.packages .box-container .box{
+  flex:1 1 30rem;
+  border-radius: .5rem;
+  overflow: hidden;
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
+}
+
+.packages .box-container .box img{
+  height: 25rem;
+  width:100%;
+  object-fit: cover;
+}
+
+.packages .box-container .box .content{
+  padding:2rem;
+}
+
+.packages .box-container .box .content h3{
+  font-size:3.5rem;
+  color:#333;
+}
+
+.packages .box-container .box .content h3 i{
+  color:var(--orange);
+}
+
+.packages .box-container .box .content p{
+  font-size:1.7rem;
+  color:#666;
+  padding:1rem 0;
+}
+
+.packages .box-container .box .content .stars i{
+  font-size:1.7rem;
+  color:var(--orange);
+}
+
+.packages .box-container .box .content .price{
+  font-size: 2rem;
+  color:#333;
+  padding-top: 1rem;
+}
+
+.packages .box-container .box .content .price span{
+  color:#666;
+  font-size: 1.5rem;
+  text-decoration: line-through;
+}
+
+    </style>
+    <section class="packages" id="packages">
+
+        <h1 class="heading" style="margin-top: 4rem; margin-bottom: 4rem;">
+            <span>p</span>
+            <span>a</span>
+            <span>c</span>
+            <span>k</span>
+            <span>a</span>
+            <span>g</span>
+            <span>e</span>
+            <span>s</span>
+        </h1>
+    
+    
+        
+    
+    <div class="box-container">
+    
+        <div class="box">
+            <img src='{% static "/media/images/Nafakhum.jpg"%}' alt="">
+            <div class="content">
+                <h3> <i class="fas fa-map-marker-alt"></i> Hill Track </h3>
+                <p>The Chittagong Hill Tracts, often shortened to simply the Hill Tracts and abbreviated to CHT.</p>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <div class="price"> ৳70% <span>৳90%</span> </div>
+                {% if request.user.is_authenticated %}
+                <a href="/tourindex" class="btn">book now</a>
+                {% else %}
+                <a href="users/login" class="btn">book now</a>
+                {% endif %}
+            </div>
+        </div>
+    
+        <div class="box">
+            <img src='{% static "/media/images/Sreemangal.jpg"%}' alt="">
+            <div class="content">
+                <h3> <i class="fas fa-map-marker-alt"></i> Popular Destination </h3>
+                <p>Bangladesh, to the east of India on the Bay of Bengal, 
+                    is a South Asian country marked by lush greenery and many waterways.</p>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <div class="price"> ৳70% <span>৳90%</span> </div>
+                   {% if request.user.is_authenticated %}
+                <a href="/tourindex" class="btn">book now</a>
+                {% else %}
+                <a href="users/login" class="btn">book now</a>
+                {% endif %}
+            </div>
+        </div>
+    
+        <div class="box">
+            <img src='{% static "/media/images/Italy.jpg"%}' alt="">
+            <div class="content">
+                <h3> <i class="fas fa-map-marker-alt"></i> Away </h3>
+                <p>Mother Earth along with mankind have co-created some of the most spectacular places on this planet. </p>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <div class="price"> ৳70% <span>৳90%</span> </div>
+                {% if request.user.is_authenticated %}
+                <a href="/tourindex" class="btn">book now</a>
+                {% else %}
+                <a href="users/login" class="btn">book now</a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+    
+    
+    </section> 
 {% endblock%}
