--- a/templates/flight/layout.html
+++ b/templates/flight/layout.html
@@ -7,34 +7,71 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.typekit.net/cav5lva.css">
   <link rel="stylesheet" href="{% static 'css/layout_style.css' %}">
-  <link rel="icon" type="image/ico" href="/static/img/favicon.ico">
+  <link rel="stylesheet" href="{% static 'css/search_style.css' %}">
+  <link rel="stylesheet" href="{% static 'css/search2_style.css' %}">
+  <!-- <link rel="icon" type="image/ico" href="/static/img/favicon.ico"> -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script type="text/javascript" src="{% static 'js/layout.js' %}"></script>
-  <title>{% block title %}Flight{% endblock %}</title>
+  <title>{% block title %}TourGuide{% endblock %}</title>
   {% block head %}
   {% endblock %}
 </head>
+<style>
+  *{
+  font-family: 'Nunito', sans-serif;
+  margin:0; padding:0;
+  box-sizing: border-box;
+  text-transform: capitalize;
+  outline: none; border:none;
+  text-decoration: none;
+  transition: all .2s linear;
+}
+</style>
 <body>
   {% block parentBody %}
   {% endblock %}
   <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="{% url 'flight:index' %}">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #333; padding-top: .5cm;">
+      <!-- <a class="navbar-brand" href="{% url 'flight:index' %}">
           <img src="{% static 'img/icon_logo.png' %}" height="34" alt="">
-      </a>
+      </a> -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
     
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item {% if not page %}active{% endif %}">
-            <a class="nav-link" href="{% url 'flight:index' %}">Home</a>
+        <ul class="navbar-nav mr-auto" style="padding-left: 5rem;">
+          <li>
+            <a class="nav-link" style="color: aliceblue; font-size: large" href="/"><span>T</span>ravel</a>
           </li>
+        </ul>
+        <ul class="navbar-nav mr-auto">
+          <li>
+            <a class="nav-link" style="color: aliceblue; padding-left: 2cm; font-size: large" href="/contact">Contact</a>
+          </li>
+          <li>
+            <a class="nav-link" style="color: aliceblue; padding-left: 2cm; font-size: large" href="{% url 'blog:home' %}">Review</a>
+          </li>
+          
+         
+          <li>
+            <a class="nav-link" style="color: aliceblue; padding-left: 2cm; font-size: large" href="/tourindex">Book</a>
+          </li>
+          
           <li class="nav-item {% if page == 'flight:bookings' %}active{% endif %}">
-            <a class="nav-link" href="{% url 'flight:bookings' %}">My Bookings</a>
+            <a class="nav-link" style="color: aliceblue; padding-left: 2cm; font-size: large" href="{% url 'flight:bookings' %}">My Bookings</a>
+          </li>
+        
+          <li>
+            <a href="{% url 'users:profile' request.user.username %}"
+            class="nav-item nav-link {% if request.user.username in request.path %}active{% endif %}" style="color: aliceblue; padding-left: 2cm; font-size: large">
+            Profile
+         </a>
+          </li>
+          <li>
+            <a class="nav-link" style="color: aliceblue; padding-left: 2cm; font-size: large" href="{% url 'users:logout' %}">Log out</a>
           </li>
         </ul>
       </div>
@@ -44,7 +81,7 @@
       {% block body %}{% endblock %}
     </main>
 
-    <footer>
+    <!-- <footer style="background-color:#333;">
       <div class="container">
         <div>
           <div class="logo-container">
@@ -53,11 +90,11 @@
           <div class="footer-content">
             <div class="links-container">
               <div>
-                <ul class="link-list">
-                  <li class="list-item"><a class="footer-links" href="#">Contact Us</a></li>
-                  <li class="list-item"><a class="footer-links" href="#">Privacy Policy</a></li>
-                  <li class="list-item"><a class="footer-links" href="#">Cookie Policy</a></li>
-                  <li class="list-item"><a class="footer-links" href="#">Terms &amp; Conditions</a></li>
+                <ul class="link-list" style="color: aliceblue;">
+                  <li class="list-item" style="color: aliceblue;"><a class="footer-links" style="color: aliceblue;" href="#">Contact Us</a></li>
+                  <li class="list-item" style="color: aliceblue;"><a class="footer-links" style="color: aliceblue;" href="#">Privacy Policy</a></li>
+                  <li class="list-item" style="color: aliceblue;"><a class="footer-links"  style="color: aliceblue;" href="#">Cookie Policy</a></li>
+                  <li class="list-item" style="color: aliceblue;"><a class="footer-links" style="color: aliceblue;" href="#">Terms &amp; Conditions</a></li>
                 </ul>
               </div>
             </div>
@@ -102,7 +139,103 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
+<style>
+
+
+  
+.footer{
+  background:#333;
+}
+
+.footer .box-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap:1.5rem;
+}
+
+.footer .box-container .box{
+  padding:1rem 0;
+  flex:1 1 25rem;
+}
+
+.footer .box-container .box h3{
+  font-size: 2.5rem;
+  padding:.7rem 0;
+  color:#fff;
+}
+
+.footer .box-container .box p{
+  font-size: 1.5rem;
+  padding:.7rem 0;
+  color:#eee;
+}
+
+.footer .box-container .box a{
+  display: block;
+  font-size: 1.5rem;
+  padding:.7rem 0;
+  color:#eee;
+}
+
+.footer .box-container .box a:hover{
+  color:var(--orange);
+  text-decoration: underline;
+}
+
+.footer .credit{
+  text-align: center;
+  padding:2rem 1rem;
+  margin-top: 1rem;
+  font-size: 2rem;
+  font-weight: normal;
+  color:#fff;
+  border-top: .1rem solid rgba(255,255,255,.2);
+}
+
+.footer .credit span{
+  color:var(--orange);
+}
+
+
+
+
+
+</style>
+    <section class="footer">
+
+      <div class="box-container">
+    
+          <div class="box" style="padding-right: 5rem;">
+              <h3>about us</h3>
+              <p>Travel is a full-service Outbound Tour Operator in Bangladesh. The founder of Travel is a 100% tourism professional with knowledge in most of the destinations and services in the world for people to enjoy. Our specialized departments with expertise offer a variety of services. Each department works independently to provide best services to our customers& clients and become the best travel agency in Bangladesh.</p>
+          </div>
+          
+          <div class="box" style="padding-left:5rem;">
+              <h3>We’ve got you covered</h3>
+           
+              <a href="/">home</a>
+              <a href="/tourindex">book</a>
+              <a href="/">services</a>
+              <a href="#">review</a>
+              <a href="/contact">contact</a>
+          </div>
+          <div class="box" style="padding-left:8rem;">
+              <h3>follow us</h3>
+              <a href="https://www.facebook.com/mdfahimur.rosid">facebook</a>
+              <a href="https://www.instagram.com/akib_alvee/">instagram</a>
+              <a href="https://github.com/fahim-01">github</a>
+              <a href="https://www.linkedin.com/in/akib-alvee-2a947b185/">linkedin</a>
+    
+          </div>
+          <div class="container">
+          <div class="footer-copyright text-center py-3" style="font-size: large; color: #fff;">© Developed by:
+            <a style="color: #fff;" href="https://www.facebook.com/mdfahimur.rosid/"> Fahimur Rashid </a>&
+            <a style="color: #fff;" href="https://www.facebook.com/akib.alvee"> Akib Alvee</a>
+          </div>
+        </div>
+    </section> 
+  
   </div>
 </body>
 </html>
