--- a/templates/flight/payment.html
+++ b/templates/flight/payment.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body %}
-    <section class="section section1">
+    <section class="section section1" style="padding-top: 5rem ;">
         <div class="container">
             <div class="payment-box">
                 <div class="payment-box-head-div">
@@ -29,7 +29,7 @@
                         <div class="row payment-amount-div">
                             <div class="form-group">
                                 <label for="payment_amount">PAYMENT AMOUNT</label>
-                                <input type="text" class="form-control" id="payment_amount" name="fare" value="$ {{fare}}" disabled required>
+                                <input type="text" class="form-control" id="payment_amount" name="fare" value="৳ {{fare}}" disabled required>
                             </div>
                         </div>
                         <div class="row card-no-div">
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                         <div class="payment-btn">
-                            <button class="btn btn-primary btn-danger">Make payment</button>
+                            <button class="btn " style="background-color: #4c645b; color: aliceblue;">Make payment</button>
                         </div>
                     </form>
                 </div>
